SectionControl系の名称変更
ContorolからManagerへ変更

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -22,8 +22,8 @@ APPL_CXXOBJS += \
 	LowPassFilter.o \
 	Scene.o \
 	Section.o \
-	SectionControl.o \
-	SpeedSectionControl.o
+	SectionManager.o \
+	SpeedSectionManager.o
 
 SRCLANG := c++
 
