しっぽ関連追加

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -34,7 +34,10 @@ APPL_CXXOBJS += \
 	MyGyroSensor.o\
 	MySonarSensor.o\
 	VirtualLineTracer.o\
-	VirtualLineTracer2.o
+	VirtualLineTracer2.o\
+	TailWalker.o\
+	TailAngle.o\
+	TailAngleJudge.o
 
 SRCLANG := c++
 
