LengthJudgeのif文いじった

--- a/app.cfg
+++ b/app.cfg
@@ -11,7 +11,8 @@ CRE_TSK( TRACER_TASK, { TA_NULL,  0, tracer_task, TRACER_PRIORITY, STACK_SIZE, N
 CRE_TSK( POLLING_TASK, { TA_NULL,  0, polling_task, POLLING_PRIORITY, STACK_SIZE, NULL });
 
 /*CRE_TSK(タスクID,{タスク属性,タスクに渡す引数,タスクの関数名,優先度,スタックサイズ,スタックの先頭番地})*/
-CRE_TSK( BT_TASK, { TA_ACT,0,bt_task,TRACER_PRIORITY+1,1024,NULL}); /*bluetooth追加*/
+CRE_TSK( BT_TASK, { TA_ACT,0,bt_task,TRACER_PRIORITY+2,1024,NULL}); /*bluetooth追加*/
+//CRE_TSK( STOP_TASK, {TA_NULL,0,stop_task,TRACER_PRIORITY+1,1024,NULL});
 
 CRE_CYC( TRACER_CYC, { TA_NULL, { TNFY_ACTTSK, TRACER_TASK }, 10U * 1000U, 1U * 1000U});
 CRE_CYC( POLLING_CYC, { TA_NULL, { TNFY_ACTTSK, POLLING_TASK }, 10U * 1000U, 1U * 5000U});
