60fps前提で周期を設定
16.666ms周期にした

--- a/app.cfg
+++ b/app.cfg
@@ -10,7 +10,7 @@ CRE_TSK( TRACER_TASK, { TA_NULL,  0, tracer_task, TRACER_PRIORITY, STACK_SIZE, N
 //CRE_TSK( BINGO_TASK, { TA_NULL, 0, bingo_task, BINGO_PRIORITY, STACK_SIZE, NULL });
 CRE_TSK( POLLING_TASK, { TA_NULL,  0, polling_task, POLLING_PRIORITY, STACK_SIZE, NULL });
 
-CRE_CYC( TRACER_CYC, { TA_NULL, { TNFY_ACTTSK, TRACER_TASK }, 10U * 1000U, 1U * 1000U});
+CRE_CYC( TRACER_CYC, { TA_NULL, { TNFY_ACTTSK, TRACER_TASK }, 16666U, 1U * 1000U});
 CRE_CYC( POLLING_CYC, { TA_NULL, { TNFY_ACTTSK, POLLING_TASK }, 10U * 1000U, 1U * 5000U});
 //CRE_CYC(EV3_CYC_ARM, { TA_NULL, { TNFY_ACTTSK, ARM_TASK },  10U * 1000U, 5U * 2000U});
 
