ショートカット調整
PIDのコンストラクタ定義方法の誤りの修正
積分値をリミッターではなく、過去値を消去する方法に変更
周期

--- a/app.cfg
+++ b/app.cfg
@@ -11,7 +11,7 @@ CRE_TSK( TRACER_TASK, { TA_NULL,  0, tracer_task, TRACER_PRIORITY, STACK_SIZE, N
 CRE_TSK( POLLING_TASK, { TA_NULL,  0, polling_task, POLLING_PRIORITY, STACK_SIZE, NULL });
 
 CRE_CYC( TRACER_CYC, { TA_NULL, { TNFY_ACTTSK, TRACER_TASK }, 16666U, 1U * 1000U});
-CRE_CYC( POLLING_CYC, { TA_NULL, { TNFY_ACTTSK, POLLING_TASK }, 10U * 1000U, 1U * 5000U});
+CRE_CYC( POLLING_CYC, { TA_NULL, { TNFY_ACTTSK, POLLING_TASK }, 16666U , 1U * 5000U});
 //CRE_CYC(EV3_CYC_ARM, { TA_NULL, { TNFY_ACTTSK, ARM_TASK },  10U * 1000U, 5U * 2000U});
 
 
@@ -19,3 +19,46 @@ CRE_CYC( POLLING_CYC, { TA_NULL, { TNFY_ACTTSK, POLLING_TASK }, 10U * 1000U, 1U 
 
 ATT_MOD("app.o");
 ATT_MOD("util.o");
+ATT_MOD("Measure.o");
+ATT_MOD("Brightness.o");
+ATT_MOD("MyColorSensor.o");
+ATT_MOD("Polling.o");
+ATT_MOD("Length.o");
+ATT_MOD("TurnAngle.o");
+ATT_MOD("Odometry.o");
+ATT_MOD("Velocity.o");
+ATT_MOD("HsvHue.o");
+ATT_MOD("HsvSatu.o");
+ATT_MOD("PID.o");
+ATT_MOD("SimpleWalker.o");
+ATT_MOD("SpeedControl.o");
+ATT_MOD("Walker.o");
+ATT_MOD("LineTracer.o");
+ATT_MOD("LowPassFilter.o");
+ATT_MOD("Scene.o");
+ATT_MOD("Section.o");
+ATT_MOD("SectionManager.o");
+ATT_MOD("SpeedSectionManager.o");
+ATT_MOD("Judge.o");
+ATT_MOD("TurnAngleJudge.o");
+ATT_MOD("ColorJudge.o");
+ATT_MOD("LengthJudge.o");
+ATT_MOD("BrightnessJudge.o");
+ATT_MOD("XPosition.o");
+ATT_MOD("YPosition.o");
+ATT_MOD("MyGyroSensor.o");
+ATT_MOD("MySonarSensor.o");
+ATT_MOD("VirtualLineTracer.o");
+ATT_MOD("VirtualLineTracer2.o");
+ATT_MOD("SlalomSectionManager.o");
+ATT_MOD("TailWalker.o");
+ATT_MOD("TailAngle.o");
+ATT_MOD("TailAngleJudge.o");
+ATT_MOD("ArmWalker.o");
+ATT_MOD("ArmAngle.o");
+ATT_MOD("ArmAngleJudge.o");
+ATT_MOD("AnglerVelocity.o");
+ATT_MOD("GyroAngle.o");
+ATT_MOD("GarageSectionManager.o");
+ATT_MOD("Stop.o");
+ATT_MOD("GyroJudge.o");
