進行角度変更できた 停止と旋回がまだできていない

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -47,7 +47,8 @@ APPL_CXXOBJS += \
 	BlockStorage.o\
 	IntersectionCircle.o\
 	RunningBody.o \
-	HBTtask.o
+	HBTtask.o\
+	global.o
 
 SRCLANG := c++
 
